syntax = "proto3";

package auth.v1;

option go_package = "./auth";

// Login request message
message LoginRequest {
    string Email = 1;
    string Password = 2;
}

message LoginResponse {
    string Token = 1; // JWT or session token
}

message RegisterLogin {
    string FirstName = 1;
    string LastName = 2;
    repeated string Roles = 3; // e.g., ["user", "admin"]
    string Email = 4;
    string Password = 5;
    string Phone = 6;
}

message RegisterResponse {
    string Status = 1; // e.g., "Registration successful"
}

// Cart service definition
service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterLogin) returns (RegisterResponse);
}